# ccrush-ai

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  PROJECT.md
src/ccrush/: __init__.py
src/ccrush/rules/: cascade.py  gravity.py  match.py  moves.py
src/ccrush/simulator/: board.py
src/ccrush/state/: models.py
tests/: helpers.py
tests/integration/: test_offline_workflow.py
tests/property/: test_move_properties.py
tests/simulator/: test_synthetic_board.py
tests/unit/: test_cascade_simulator.py  test_gravity.py  test_match_detector.py  test_models.py  test_move_generator.py
